# lan-share

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
lan_share/: __main__.py  discovery.py  firewall.py  protocol.py  transfer.py
